--- a/css/main2.css
+++ b/css/main2.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 * {
   margin: 0;
@@ -68,8 +68,8 @@ form.sign-in-form {
   font-size: 2.2rem;
   color: #444;
   /* margin-bottom: 10px; */
-}
-
+/* } */
+/* 
 .input-field {
   max-width: 380px;
   width: 100%;
@@ -104,45 +104,16 @@ form.sign-in-form {
 .input-field input::placeholder {
   color: #aaa;
   font-weight: 500;
-}
-.Forgtpwd {
+}  */
+/* .Forgtpwd {
   text-decoration: none;
   color: #333;
 }
 .Forgtpwd:hover {
   color: #8cc63f;
-}
-.social-text {
-  padding: 0.7rem 0;
-  font-size: 1rem;
-}
+} */
 
-.social-media {
-  display: flex;
-  justify-content: center;
-}
-
-.social-icon {
-  height: 46px;
-  width: 46px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0.45rem;
-  color: rgb(59, 57, 57);
-  border-radius: 50%;
-  border: 1px solid rgb(59, 57, 57);
-  text-decoration: none;
-  font-size: 1.1rem;
-  transition: 0.3s;
-}
-
-.social-icon:hover {
-  color: #8cc63f;
-  border-color: #8cc63f;
-}
-
-.btn {
+/* .btn {
   width: 150px;
   background-color: #8cc63f;
   border: none;
@@ -168,9 +139,9 @@ form.sign-in-form {
   left: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
+} */
 
-.container:before {
+/* .container:before {
   content: "";
   position: absolute;
   height: 2000px;
@@ -182,9 +153,9 @@ form.sign-in-form {
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
-}
+} */
 
-
+/* 
 .panel {
   display: flex;
   flex-direction: column;
@@ -241,7 +212,7 @@ form.sign-in-form {
 }
 
 /* ANIMATION */
-
+/* 
 .container.sign-up-mode:before {
   transform: translate(100%, -50%);
   right: 52%;
@@ -276,21 +247,10 @@ form.sign-in-form {
 
 .container.sign-up-mode .right-panel {
   pointer-events: all;
-}
+} */ 
 
-.error {
-  background: #F2DEDE;
-    color: #A94442;
-    padding: 10px;
-    width: 70%;
-    border-radius: 5px;
-    margin: 20px auto;
-    border: 2px solid hsl(0,100%,74%);
-    background: url(../img/icon-error.svg);
-    background-position: 95% 50%;
-    background-repeat: no-repeat;
-}
-@media (max-width: 870px) {
+
+/* @media (max-width: 870px) {
   .container {
     min-height: 800px;
     height: 100vh;
@@ -389,10 +349,10 @@ form.sign-in-form {
     top: 5%;
     transform: translate(-50%, 0);
   }
-}
+} */
 
-@media (max-width: 570px) {
-  form {
+/* @media (max-width: 570px) { */
+  /* form {
     padding: 0 1.5rem;
   }
 
@@ -413,6 +373,206 @@ form.sign-in-form {
     bottom: 28%;
     left: 50%;
   }
+} */
+
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+html,body{
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  padding: 28px;
+  place-items: center;
+  background: -webkit-linear-gradient(left, #e2e8e1, #e2e8e1);
+  flex-direction: row-reverse;
+
+}
+::selection{
+  background: #50d540;
+  color: #fff;
+}
+.wrapper{
+  margin-right: 158px;
+  overflow: hidden;
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+}
+.wrapper .title-text{
+  display: flex;
+  width: 200%;
+}
+.wrapper .title{
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.wrapper .slide-controls{
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+}
+.slide-controls .slide{
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+.slide-controls label.signup{
+  color: #000;
+}
+.slide-controls .slider-tab{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 5px;
+  background: -webkit-linear-gradient(left, #2d9422, #50d540);
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+input[type="radio"]{
+  display: none;
+}
+#signup:checked ~ .slider-tab{
+  left: 50%;
+}
+#signup:checked ~ label.signup{
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login{
+  color: #000;
+}
+#login:checked ~ label.signup{
+  color: #000;
+}
+#login:checked ~ label.login{
+  cursor: default;
+  user-select: none;
+}
+.wrapper .form-container{
+  width: 100%;
+  overflow: hidden;
+}
+.form-container .form-inner{
+  display: flex;
+  width: 200%;
+}
+.form-container .form-inner form{
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.form-inner form .field{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.form-inner form .field input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.form-inner form .field input:focus{
+  border-color: #7ffd85;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
+}
+.form-inner form .field input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .field input:focus::placeholder{
+  color: #b3b3b3;
+}
+.form-inner form .pass-link{
+  margin-top: 5px;
+}
+.form-inner form .signup-link{
+  text-align: center;
+  margin-top: 30px;
+}
+.form-inner form .pass-link a,
+.form-inner form .signup-link a{
+  color: #fa4299;
+  text-decoration: none;
+}
+.form-inner form .pass-link a:hover,
+.form-inner form .signup-link a:hover{
+  text-decoration: underline;
+}
+form .btn{
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .btn-layer{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(right, #64ce49, #31c54a, #41d124, #16ad3b);
+  border-radius: 5px;
+  transition: all 0.4s ease;;
+}
+form .btn:hover .btn-layer{
+  left: 0;
+}
+form .btn input[type="submit"]{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
+.field span {
+	color: #e74c3c;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	visibility: hidden;
+}
+
+.field.error span {
+	visibility: visible;
 }
 /* reset password */
 .forgot {
@@ -451,12 +611,13 @@ form.sign-in-form {
   border: 1px solid lightgray;
 }
 .principale {
-  text-align: initial;
+  
   border-radius: 26px;
   box-shadow: 2px 2px 14px #323232;
 }
 .principale p:first-child {
   padding: 20px 10px 0px 10px;
+  text-align: initial;
 }
 #perror{
   margin: 30px 40px 0px 40px;
@@ -483,7 +644,7 @@ form.sign-in-form {
   background: #F2DEDE;
   color: #A94442;
   padding: 10px;
-  width: 74%;
+  width: 100%;
   border-radius: 5px;
   /* margin: 20px auto; */
   border: 2px solid hsl(0,100%,74%);
@@ -495,7 +656,7 @@ form.sign-in-form {
  
   color: #080808;
   padding: 10px;
-  width: 74%;
+  width: 100%;
   border-radius: 5px;
   /* margin: 20px auto; */
   border: 2px solid #70db70;
@@ -509,4 +670,60 @@ form.sign-in-form {
 #spanerror{
   margin:0px 132px;
     padding-right:50px;
+}
+
+.social-text {
+  padding: 0.7rem 0;
+  font-size: 1.3rem;
+  font-family: 'Kaisei HarunoUmi', serif;
+  font-weight: bold;
+}
+
+.social-media {
+text-align: center;
+width: 37%;
+}
+
+.social-icon {
+  height: 46px;
+  width: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0.45rem;
+  color: rgb(59, 57, 57);
+  border-radius: 50%;
+  border: 1px solid rgb(59, 57, 57);
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.social-icon:hover {
+  color: #8cc63f;
+  border-color: #8cc63f;
+}
+.error {
+  background: #F2DEDE;
+    color: #A94442;
+    padding: 10px;
+
+    border-radius: 5px;
+    margin: 20px auto;
+    border: 2px solid hsl(0,100%,74%);
+    background: url(../img/icon-error.svg);
+    background-position: 95% 50%;
+    background-repeat: no-repeat;
+}
+.social-media-icon{
+  display: flex;
+  justify-content: center;
+}
+.description{
+  text-align: left;
+  margin: 30px 0px 30px 20px;
+  
+  font-size: 1.2rem;
+  font-family: 'Kaisei HarunoUmi', serif;
+font-family: 'Roboto Slab', serif;
 }
